2022-01-28 - Fixed Header and Main, but still not responsive and with new font - Update 006

--- a/css/menu.css
+++ b/css/menu.css
@@ -5,8 +5,8 @@ header {
     height: 15vh;
     width: 100vw;
     /* margin-top: 5rem; */
-    /* border: 2px red dashed; */
     /* z-index: 1; */
+    font-weight: bolder;
   }
   nav div{
     display: flex;
