--- a/css/var.css
+++ b/css/var.css
@@ -3,5 +3,5 @@
     --font-color: white;
     --bg-img: url(../img/bg_001.jpg);
     --logo-img: url(../img/logo_001.png);
-    --font-app: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    --font-app: Arial, Helvetica, sans-serif;
 }
